# tide-and-fortune

./: Cargo.toml  README.md
.github/: .copilot-instructions.md
assets/ships/: sloop.blend
crates/tf_client/: Cargo.toml
crates/tf_client/assets/ships/: sloop.blend1  sloop.glb
crates/tf_client/src/: log_capture.rs  main.rs
crates/tf_core/: Cargo.toml
crates/tf_core/src/: lib.rs
crates/tf_core/src/sailing/: mod.rs  points_of_sail.rs  wind.rs
crates/tf_net/: Cargo.toml
crates/tf_net/src/: lib.rs
crates/tf_render/: Cargo.toml
crates/tf_render/src/: camera.rs  debug_ui.rs  hud.rs  lib.rs  world.rs
crates/tf_server/: Cargo.toml
crates/tf_server/src/: main.rs
crates/tf_simulation/: Cargo.toml
crates/tf_simulation/src/: lib.rs  ship.rs
crates/tf_simulation/src/systems/: mod.rs  player_input.rs  sailing_physics.rs
crates/tf_ui/: Cargo.toml
crates/tf_ui/src/: lib.rs
docs/design/: GAME_DESIGN.md
